kubernetes/apps/speedtest-tracker/speedtest-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
          - 100.127.99.35
          - 192.168.178.2
        searches:
          - speedtest-tracker.svc.cluster.local
        options:
          - name: ndots
            value: "5"
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:v1.15.0-ls170
          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: speedtest-tracker
          persistentVolumeClaim:
            claimName: speedtest-tracker
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  ports:
    - port: 80
  selector:
    app: speedtest-tracker
  type: ClusterIP
