kubernetes/apps/speedtest-tracker/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker-ingressroute-tailscale
  namespace: speedtest-tracker
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: speedtest-tracker
          port: 80
  tls:
    secretName: speedtest-certificate-secret-internal
